# ZeroIdle

./: .gitignore  Cargo.toml  README.md  sonar-project.properties
.github/workflows/: release.yml  sonarcloud.yml
src/: cleanup.rs  idm.rs  killer.rs  main.rs  optimize.rs  startup.rs
